force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/Scripting_of_OS_Required__c.field-meta.xml
<CustomField>
    <fullName>Scripting_of_OS_Required__c</fullName>
    <inlineHelpText>Confirm if scripting/customization of the OS is required.</inlineHelpText>
    <label>Scripting of OS Required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>