force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/Service_Engineering__c.field-meta.xml
<CustomField>
    <fullName>Service_Engineering__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service Engineering</label>
    <type>Checkbox</type>
</CustomField>