force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/Service_Engineering_Asignee__c.field-meta.xml
<CustomField>
    <fullName>Service_Engineering_Asignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Engineering Assignee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Level_of_Effort_Estimates8</relationshipName>
    <type>Lookup</type>
</CustomField>