force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/Service_Engineering_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Engineering_Date__c</fullName>
    <label>Service Engineering Date</label>
    <type>Date</type>
</CustomField>