force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/SharePoint_Folder__c.field-meta.xml
<CustomField>
    <fullName>SharePoint_Folder__c</fullName>
    <label>SharePoint Folder</label>
    <type>Url</type>
</CustomField>