force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/SIF_2__c.field-meta.xml
<CustomField>
    <fullName>SIF_2__c</fullName>
    <label>SIF</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Required</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>