force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/SIP__c.field-meta.xml
<CustomField>
    <fullName>SIP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SIP</label>
    <type>Checkbox</type>
</CustomField>