force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/SO_Number__c.field-meta.xml
<CustomField>
    <fullName>SO_Number__c</fullName>
    <label>SO Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>