force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/SO_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>SO_Reviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tells whether the LoE has been reviewed by an SO. Can only be checked by a TSA Manager.</description>
    <label>SO Reviewed</label>
    <type>Checkbox</type>
</CustomField>