force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/SO_Reviewed_Date__c.field-meta.xml
<CustomField>
    <fullName>SO_Reviewed_Date__c</fullName>
    <label>SO Reviewed Date</label>
    <type>Date</type>
</CustomField>