force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/Solution_Design_Assignee__c.field-meta.xml
<CustomField>
    <fullName>Solution_Design_Assignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Solution Design Assignee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Level_of_Effort_Estimates4</relationshipName>
    <type>Lookup</type>
</CustomField>