force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/Solution_Design_Complete__c.field-meta.xml
<CustomField>
    <fullName>Solution_Design_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Solution Design Complete</label>
    <type>Checkbox</type>
</CustomField>