force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/Solution_Design_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Solution_Design_Complete_Date__c</fullName>
    <label>Solution Design Complete Date</label>
    <type>Date</type>
</CustomField>