force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/SS7__c.field-meta.xml
<CustomField>
    <fullName>SS7__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SS7</label>
    <type>Checkbox</type>
</CustomField>