force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/SSR_Migration_Options__c.field-meta.xml
<CustomField>
    <fullName>SSR_Migration_Options__c</fullName>
    <label>SSR Migration Options</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Greenfield</fullName>
            </value>
            <value>
                <fullName>Phased</fullName>
            </value>
            <value>
                <fullName>Big Bang</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>