force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>LoE Estimate Requested</fullName>
            </value>
            <value>
                <fullName>Awaiting Clarifications</fullName>
            </value>
            <value>
                <fullName>LoE Request Received - WIP</fullName>
            </value>
            <value>
                <fullName>TSA Estimate Completed</fullName>
            </value>
            <value>
                <fullName>LoE Estimate Completed</fullName>
            </value>
            <value>
                <fullName>Request Cancelled</fullName>
            </value>
            <value>
                <fullName>Budgetary LoE Completed</fullName>
                <isActive>false</isActive>
                <label>Budgetary LoE Completed</label>
            </value>
            <value>
                <fullName>Budgetary LoE Requested</fullName>
                <isActive>false</isActive>
                <label>Budgetary LoE Requested</label>
            </value>
            <value>
                <fullName>Budgetary LoE in Progress</fullName>
                <isActive>false</isActive>
                <label>Budgetary LoE in Progress</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>