force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/Systems_to_be_Integrated_to__c.field-meta.xml
<CustomField>
    <fullName>Systems_to_be_Integrated_to__c</fullName>
    <inlineHelpText>Confirm the systems to be integrated with, and provide any available additional information.</inlineHelpText>
    <label>Systems to be Integrated to</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>