force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/Target_SW_Version__c.field-meta.xml
<CustomField>
    <fullName>Target_SW_Version__c</fullName>
    <inlineHelpText>For OYS upgrades, please confirm the required SW version.</inlineHelpText>
    <label>Target SW Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>