force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/TDR_Utilization__c.field-meta.xml
<CustomField>
    <fullName>TDR_Utilization__c</fullName>
    <inlineHelpText>Confirm if TDR utilization is required.</inlineHelpText>
    <label>TDR Utilization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>