force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/Time_to_Build_Complete_LoE_Requests__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Build_Complete_LoE_Requests__c</fullName>
    <formula>(LoE_Estimate_Completed_Entry_Date__c -0) - ( LoE_Requested_WIP_Exit_Date__c - LoE_Requested_WIP_Entry_Date_Time__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time to Build/Complete LoE Requests</label>
    <type>DateTime</type>
</CustomField>