force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/Time_to_process_LoE_Requests__c.field-meta.xml
<CustomField>
    <fullName>Time_to_process_LoE_Requests__c</fullName>
    <formula>( LoE_Requested_WIP_Exit_Date__c -  LoE_Requested_WIP_Entry_Date_Time__c ) - ( LoE_Estimate_Requested_Exit_Date__c - LoE_Estimate_Requested_Entry__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time to process LoE Requests</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>