force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/Total_Cost_CDA_Total__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_CDA_Total__c</fullName>
    <formula>PS_PMO_CDA_SVCS_Total_Cost__c +  PS_CIA_CDA_SVCS_Total_Cost__c +  PS_SE_CDA_SVCS_Total_Cost__c +  PS_FIE_CDA_LAB_SVCS_Total_Cost__c +   PS_FIE_CDA_PROD_SVCS_Total_Cost__c +  PS_CCA_CDA_SVCS_Total_Cost__c + PS_TRA_CDA_SVCS_Total_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost (CDA)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>