force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/Total_Cost_OTS_Total__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_OTS_Total__c</fullName>
    <formula>PS_PMO_SVCS_Total_Cost__c +  PS_SDE_SVCS_Total_Cost__c +  PS_FIE_LAB_SVCS_Total_Cost__c +  PS_FIE_PROD_SVCS_Total_Cost__c +   PS_TRA_SVCS_Total_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost (OTS)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>