force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/TSA1__c.field-meta.xml
<CustomField>
    <fullName>TSA1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TSA</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Level_of_Effort_Estimates1</relationshipName>
    <type>Lookup</type>
</CustomField>