force-app/main/default/objects/Level_of_Effort_Estimate__c/fields/TSA__c.field-meta.xml
<CustomField>
    <fullName>TSA__c</fullName>
    <formula>Opportunity_Name__r.Primary_SDE__r.FirstName + &quot; &quot; +Opportunity_Name__r.Primary_SDE__r.LastName</formula>
    <label>TSA</label>
    <type>Text</type>
</CustomField>