force-app/main/default/objects/Level_of_Effort_Estimate__c/recordTypes/Level_of_Effort_Layout_After_Complete_Cancelled.recordType-meta.xml
<RecordType>
    <fullName>Level_of_Effort_Layout_After_Complete_Cancelled</fullName>
    <active>true</active>
    <description>Level of Effort Layout After Complete/Cancelled</description>
    <label>Level of Effort Layout After Complete/Cancelled</label>
</RecordType>