force-app/main/default/objects/Level_of_Effort_Estimate__c/recordTypes/LoE_Create_Record.recordType-meta.xml
<RecordType>
    <fullName>LoE_Create_Record</fullName>
    <active>true</active>
    <label>LoE Create Record</label>
</RecordType>