force-app/main/default/objects/Level_of_Effort_Estimate__c/recordTypes/LoE_Estimate_After_Submit.recordType-meta.xml
<RecordType>
    <fullName>LoE_Estimate_After_Submit</fullName>
    <active>true</active>
    <label>LoE Estimate After Submit</label>
</RecordType>