force-app/main/default/objects/Level_of_Effort_Estimate__c/recordTypes/LoE_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>LoE_Record_Type</fullName>
    <active>true</active>
    <label>LoE Record Type</label>
</RecordType>