force-app/main/default/objects/Level_of_Effort_Estimate__c/validationRules/Bi_Directional_Replication_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Bi_Directional_Replication_is_Required</fullName>
    <active>false</active>
    <description>Bi Directional Replication is required on LoE Estimate Requested</description>
    <errorConditionFormula>AND(
ISPICKVAl(  Stage__c  , &quot;LoE Estimate Requested&quot; ),
ISPICKVAL(   Bi_Directional_Replication__c  , &quot;&quot;   ))</errorConditionFormula>
    <errorDisplayField>Bi_Directional_Replication__c</errorDisplayField>
    <errorMessage>Required when LoE Estimate Requested</errorMessage>
</ValidationRule>