force-app/main/default/objects/Level_of_Effort_Estimate__c/validationRules/Comments_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Comments_Required</fullName>
    <active>true</active>
    <description>Comments is required on LoE Estimate Requested</description>
    <errorConditionFormula>AND(
ISPICKVAl(  Stage__c  , &quot;LoE Estimate Requested&quot; ),
ISBLANK(     Comments__c  ))</errorConditionFormula>
    <errorDisplayField>Comments__c</errorDisplayField>
    <errorMessage>Required when LoE Estimate Requested</errorMessage>
</ValidationRule>