force-app/main/default/objects/Level_of_Effort_Estimate__c/validationRules/Country_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Country_is_Required</fullName>
    <active>false</active>
    <description>Country is required on LoE Estimate Requested</description>
    <errorConditionFormula>AND(
ISPICKVAl(  Stage__c  , &quot;LoE Estimate Requested&quot; ),
ISBLANK(   Country__c  ))</errorConditionFormula>
    <errorDisplayField>Country__c</errorDisplayField>
    <errorMessage>Required when LoE Estimate Requested</errorMessage>
</ValidationRule>