force-app/main/default/objects/Level_of_Effort_Estimate__c/validationRules/Current_SW_Version_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Current_SW_Version_Required</fullName>
    <active>false</active>
    <description>Current SW Version is Required for CDA Enhancement</description>
    <errorConditionFormula>AND( 
ISPICKVAl(    Deployment_Type__c   , &quot;CDA Enhancement&quot; ),
ISBLANK(    Current_SW_Version__c  ))</errorConditionFormula>
    <errorDisplayField>Current_SW_Version__c</errorDisplayField>
    <errorMessage>Required for CDA Enhancement</errorMessage>
</ValidationRule>