force-app/main/default/objects/Level_of_Effort_Estimate__c/validationRules/Current_SW_Version_Required_for_OTS_Upgr.validationRule-meta.xml
<ValidationRule>
    <fullName>Current_SW_Version_Required_for_OTS_Upgr</fullName>
    <active>false</active>
    <description>Current SW Version is Required for OTS Upgrade</description>
    <errorConditionFormula>AND( 
ISPICKVAl(    Deployment_Type__c   , &quot;OTS Upgrade&quot; ),
ISBLANK(    Current_SW_Version__c  ))</errorConditionFormula>
    <errorDisplayField>Current_SW_Version__c</errorDisplayField>
    <errorMessage>Required for OTS Upgrade</errorMessage>
</ValidationRule>