force-app/main/default/objects/Level_of_Effort_Estimate__c/validationRules/Customer_Tier_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Customer_Tier_Required</fullName>
    <active>false</active>
    <description>Customer Tier is required on LoE Estimate Requested</description>
    <errorConditionFormula>AND(
ISPICKVAl(  Stage__c  , &quot;LoE Estimate Requested&quot; ),
ISPICKVAL(   Customer_Tier__c , &quot;&quot; ))</errorConditionFormula>
    <errorDisplayField>Customer_Tier__c</errorDisplayField>
    <errorMessage>Required when LoE Estimate Requested</errorMessage>
</ValidationRule>