force-app/main/default/objects/Level_of_Effort_Estimate__c/validationRules/Deployment_Resourcing_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Deployment_Resourcing_is_Required</fullName>
    <active>false</active>
    <description>Deployment Resourcing is required on LoE Estimate Requested</description>
    <errorConditionFormula>AND(
ISPICKVAl(  Stage__c  , &quot;LoE Estimate Requested&quot; ),
ISPICKVAL(  Deployment_Resourcing__c , &quot;&quot; ))</errorConditionFormula>
    <errorDisplayField>Deployment_Resourcing__c</errorDisplayField>
    <errorMessage>Required when LoE Estimate Requested</errorMessage>
</ValidationRule>