force-app/main/default/objects/Level_of_Effort_Estimate__c/validationRules/Deployment_Type_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Deployment_Type_Required</fullName>
    <active>true</active>
    <description>Deployment Type is required on LoE Estimate Requested</description>
    <errorConditionFormula>AND(
ISPICKVAl(  Stage__c  , &quot;LoE Estimate Requested&quot; ),
ISPICKVAL(    Deployment_Type__c  , &quot;&quot; ))</errorConditionFormula>
    <errorDisplayField>Deployment_Type__c</errorDisplayField>
    <errorMessage>Required when LoE Estimate Requested</errorMessage>
</ValidationRule>