force-app/main/default/objects/Level_of_Effort_Estimate__c/validationRules/Deployment_Type_Required_on_Budgetary_CP.validationRule-meta.xml
<ValidationRule>
    <fullName>Deployment_Type_Required_on_Budgetary_CP</fullName>
    <active>false</active>
    <description>Deployment Type Required on Budgetary LoEs</description>
    <errorConditionFormula>AND(
ISPICKVAl( Stage__c , &quot;Budgetary LoE Completed&quot; ),
ISPICKVAL( Deployment_Type__c ,&quot;&quot;))</errorConditionFormula>
    <errorDisplayField>Deployment_Type__c</errorDisplayField>
    <errorMessage>Required when Stage is Budgetary</errorMessage>
</ValidationRule>