force-app/main/default/objects/Level_of_Effort_Estimate__c/validationRules/ECC_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>ECC_is_Required</fullName>
    <active>false</active>
    <description>ECC is required on LoE Estimate Requested</description>
    <errorConditionFormula>AND(
ISPICKVAl(  Stage__c  , &quot;LoE Estimate Requested&quot; ),
ISPICKVAL(   ECC__c   , &quot;&quot;   ))</errorConditionFormula>
    <errorDisplayField>ECC__c</errorDisplayField>
    <errorMessage>Required when LoE Estimate Requested</errorMessage>
</ValidationRule>