force-app/main/default/objects/Level_of_Effort_Estimate__c/validationRules/Infrastructure_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Infrastructure_is_Required</fullName>
    <active>false</active>
    <description>Infrastructure is required on LoE Estimate Requested</description>
    <errorConditionFormula>AND(
ISPICKVAl(  Stage__c  , &quot;LoE Estimate Requested&quot; ),
ISPICKVAL(   Infrastructure__c , &quot;&quot; ))</errorConditionFormula>
    <errorDisplayField>Infrastructure__c</errorDisplayField>
    <errorMessage>Required when LoE Estimate Requested</errorMessage>
</ValidationRule>