force-app/main/default/objects/Level_of_Effort_Estimate__c/validationRules/Integration_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Integration_is_Required</fullName>
    <active>false</active>
    <description>Integration is required on LoE Estimate Requested</description>
    <errorConditionFormula>AND(
ISPICKVAl(  Stage__c  , &quot;LoE Estimate Requested&quot; ),
ISPICKVAL(    Integration_to_external_legacy_systems__c  , &quot;&quot;   ))</errorConditionFormula>
    <errorDisplayField>Integration_to_external_legacy_systems__c</errorDisplayField>
    <errorMessage>Required when LoE Estimate Requested</errorMessage>
</ValidationRule>