force-app/main/default/objects/Level_of_Effort_Estimate__c/validationRules/Lab_Nodes_Master_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Lab_Nodes_Master_Required</fullName>
    <active>false</active>
    <description>Lab Nodes Master is required on LoE Estimate Requested</description>
    <errorConditionFormula>AND(
ISPICKVAl(  Stage__c  , &quot;LoE Estimate Requested&quot; ),
ISBLANK(   Lab_Nodes_Master__c  ))</errorConditionFormula>
    <errorDisplayField>Lab_Nodes_Master__c</errorDisplayField>
    <errorMessage>Required when LoE Estimate Requested</errorMessage>
</ValidationRule>