force-app/main/default/objects/Level_of_Effort_Estimate__c/validationRules/LoE_Summary_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>LoE_Summary_Required</fullName>
    <active>true</active>
    <description>LoE Summary is required on LoE Estimate Requested</description>
    <errorConditionFormula>AND(
ISPICKVAl(  Stage__c  , &quot;LoE Estimate Requested&quot; ),
ISBLANK(    LoE_Summary__c  ))</errorConditionFormula>
    <errorDisplayField>LoE_Summary__c</errorDisplayField>
    <errorMessage>Required when LoE Estimate Requested</errorMessage>
</ValidationRule>