force-app/main/default/objects/Level_of_Effort_Estimate__c/validationRules/Migration_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Migration_is_Required</fullName>
    <active>false</active>
    <description>Migration is required on LoE Estimate Requested</description>
    <errorConditionFormula>AND(
ISPICKVAl(  Stage__c  , &quot;LoE Estimate Requested&quot; ),
ISPICKVAL(    Migration__c   , &quot;&quot; ))</errorConditionFormula>
    <errorDisplayField>Migration__c</errorDisplayField>
    <errorMessage>Required when LoE Estimate Requested</errorMessage>
</ValidationRule>