force-app/main/default/objects/Level_of_Effort_Estimate__c/validationRules/Need_by_Date_need_to_be_today_or_future.validationRule-meta.xml
<ValidationRule>
    <fullName>Need_by_Date_need_to_be_today_or_future</fullName>
    <active>false</active>
    <description>Need by date needs to be today or future date</description>
    <errorConditionFormula>Need_by_Date__c &lt; TODAY () &amp;&amp;  ISPICKVAL(Stage__c, &quot;LoE Estimate Requested&quot;)</errorConditionFormula>
    <errorDisplayField>Need_by_Date__c</errorDisplayField>
    <errorMessage>Need by Date must be today or a future date</errorMessage>
</ValidationRule>